Bug 984823 - Use clamp to edges with tiles on b2g. r=Cwiiis